--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.13)
 project(caravel)
 
-set(CMAKE_CXX_STANDARD 14)
-set(liblist boost_program_options)
+add_definitions("-std=c++11")
+
+include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
+conan_basic_setup()
 
 add_executable(caravel src/main.cpp)
-target_link_libraries(caravel boost_program_options)
+target_link_libraries(caravel ${CONAN_LIBS})
+
