--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,5 +60,6 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "*.ipp": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
