--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -latomic")
 
 conan_basic_setup()
 
-add_executable(caravel src/main.cpp src/application.cpp src/utils.cpp src/signal.cpp src/actors.cpp)
+add_executable(caravel src/main.cpp src/application.cpp src/utils.cpp src/signal.cpp 
+                       src/actors/actors.cpp src/actors/receive_msg_act.cpp src/actors/output_msg_act.cpp
+                       src/actors/send_msg_act.cpp src/actors/log_msg_act.cpp src/actors/parse_file_act.cpp
+                       src/actors/parse_input_act.cpp)
 target_link_libraries(caravel ${CONAN_LIBS})
 
