feat: adds input actor and exit one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,6 @@ conan_basic_setup()
 add_executable(caravel src/main.cpp src/application.cpp src/utils.cpp src/signal.cpp 
                        src/actors/actors.cpp src/actors/receive_msg_act.cpp src/actors/output_msg_act.cpp
                        src/actors/send_msg_act.cpp src/actors/log_msg_act.cpp src/actors/parse_file_act.cpp
-                       src/actors/parse_input_act.cpp)
+                       src/actors/parse_input_act.cpp src/actors/parse_simulate_act.cpp src/actors/exit_act.cpp)
 target_link_libraries(caravel ${CONAN_LIBS})
 
