feat: Implemets middleman test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,6 @@ add_executable(caravel src/main.cpp src/application.cpp src/utils.cpp src/signal
                        src/actors/actors.cpp src/actors/receive_msg_act.cpp src/actors/output_msg_act.cpp
                        src/actors/send_msg_act.cpp src/actors/log_msg_act.cpp src/actors/parse_input_act.cpp 
                        src/actors/parse_simulation_act.cpp src/actors/exit_act.cpp src/actors/cyclic_msg_act.cpp
-                       src/actors/receive_input_act.cpp)
+                       src/actors/receive_input_act.cpp src/actors/middleman_act.cpp src/actors/ethernet_act.cpp)
 target_link_libraries(caravel ${CONAN_LIBS})
 
